--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <script src='./arguments.js'></script>
+    <script src='./inherits.js'></script>
   </body>
 </html>
